# auto_waveform_debugger

./: .gitignore  .gitmodules  CLAUDE.md  MCP_SIGNATURES.md  README.md  TEST.md  clean_test_artifacts.sh  codex_base_instruction.md  codex_debug_instructions.md  failure_history.md  requirements.txt  test_plan.md
agent_debug_automation/: README.md  Tech_Note.md  __init__.py  agent_debug_automation_mcp.py  clients.py  expression_evaluator.py  expression_parser.py  mapping.py  models.py  ranking.py  server.py  sessions.py  tools.py  virtual_signals.py
agent_debug_automation/docs/: Tech_Note.md
agent_debug_automation/tests/: compare_with_vcs.py  test_cross_linking.py  test_expression_evaluator.py  test_expression_parser.py  test_virtual_signals.py
agent_debug_automation/tests/fixtures/: logic_ops_tb.v  simview.f
agent_debug_textbook/: 00_ROUTER.md  01_WAVEFORM_BROWSING.md  02_STRUCTURAL_EXPLORATION.md  03_SIGNAL_INVESTIGATION.md  04_ROOT_CAUSE_ANALYSIS.md  05_SESSION_MANAGEMENT.md  06_SUPERVISED_DEBUG.md  07_VIRTUAL_SIGNALS.md  08_DESIGN_MAPPING.md  09_X_TRACING.md  CASE_STUDY_01_nvdla_id_fifo.md  CLAUDE.md  EDA_USE.md  PROTOCOL_AXI.md  rtl_debug_guide.md
docs/: MCP_SIGNATURES.md  PROJECT_CAPABILITIES.md  PROJ_DESC.md  TEST.md  test_plan.md
docs/refactor/: contracts.md  target_layout.md  test_baseline.md  test_taxonomy.md
skills/rtl_crawler/: SKILL.md
skills/rtl_crawler/references/: templates.md
skills/rtl_crawler_multi_agent/: SKILL.md
skills/rtl_crawler_multi_agent/references/: worker_prompt.md
skills/rtl_crawler_multi_agent_bak/references/: templates.md  worker_prompt.md
standalone_trace/: AssignmentUtils.cc  AssignmentUtils.h  CMakeLists.txt  LOCALTEST.md  README.md  Tech_Note.md  main.cc
standalone_trace/compile/: CompileData.h  Compiler.cc  Compiler.h
standalone_trace/db/: EntryPoints.h  GraphDb.cc  GraphDb.h  GraphDbInternals.h  GraphDbTypes.h  GraphDb_all.cc
standalone_trace/docs/: BENCHMARK_HOWTO.md  COMPILE_BENCHMARK.md  STRUCT_MEMBER_LEVEL2_TODO.md  TODO.md  Tech_Note.md
standalone_trace/query/: FindQuery.cc  FindQuery.h  HierQuery.cc  HierQuery.h  TraceQuery.cc  TraceQuery.h  WhereIsQuery.cc  WhereIsQuery.h
standalone_trace/scripts/: preprocess_svt_axi_trace.py
standalone_trace/serve/: ServeLoop.cc  ServeLoop.h
standalone_trace/skill/: SKILL.md
standalone_trace/skill/agents/: openai.yaml
standalone_trace/test_case0/: timer_tb.sv
standalone_trace/tests/: assignment_utils_test.cc  semantic_regression.py
standalone_trace/tests/fixtures/: compat_severity.sv  concat_top.sv  semantic_top.sv  struct_top.sv
standalone_trace_graph/: CMakeLists.txt  README.md  main.cc
standalone_trace_graph/tests/: smoke_test.py
standalone_trace_graph/tests/data/: smoke.sv
test_cases/: .gitignore  CROSS_LINK_TEST_SUITE.md  run_all_tests.sh  run_cross_link_tests.py
test_cases/.qwen/: PROJECT_SUMMARY.md
test_cases/tc01_generate_loop/: files.f  run_test.sh
test_cases/tc01_generate_loop/rtl/: buffer_cell.v  top.sv
test_cases/tc02_multi_level_generate/: files.f  run_test.sh
test_cases/tc02_multi_level_generate/rtl/: pe_cell.v  top.sv
test_cases/tc03_param_inst_different/: files.f  run_test.sh
test_cases/tc03_param_inst_different/rtl/: fifo_cell.v  top.sv
test_cases/tc04_conditional_generate/: run_test.sh
test_cases/tc04_conditional_generate/rtl/: top.sv
test_cases/tc05_multi_dim_arrays/: run_test.sh
test_cases/tc05_multi_dim_arrays/rtl/: top.sv
test_cases/tc06_structural_hierarchy/: files.f  run_test.sh
test_cases/tc06_structural_hierarchy/rtl/: block_module.v  intermediate_module.v  leaf_cell.v  top.sv
test_cases/tc07_mux_tree/: run_test.sh
test_cases/tc07_mux_tree/rtl/: top.sv
test_cases/tc08_priority_encoder/: run_test.sh
test_cases/tc08_priority_encoder/rtl/: top.sv
test_cases/tc09_counter_chain/: files.f  run_test.sh
test_cases/tc09_counter_chain/rtl/: counter_cell.v  top.sv
test_cases/tc10_clock_gating/: files.f  run_test.sh
test_cases/tc10_clock_gating/rtl/: icg_cell.v  top.sv
test_cases/tc11_deep_soc/: files.f  run_test.sh
test_cases/tc12_multi_cone/: files.f  run_test.sh
test_cases/tc13_clock_reset_tree/: files.f  run_test.sh
test_cases/tc14_system_tasks/: run_test.sh
test_cases/tc15_mixed_signal_flow/: run_test.sh
test_cases/tc16_cross_link_backend_sanity/: README.md  test_tc16_backend_sanity.py
test_cases/tc17_cross_link_smoke/: README.md  test_tc17_smoke.py
test_cases/tc18_cross_link_edge_correctness/: README.md  test_tc18_edge_correctness.py
test_cases/tc19_cross_link_direction_ranking/: README.md  run_test.sh  test_tc19_direction_ranking.py
test_cases/tc20_cross_link_closeness_ranking/: README.md  test_tc20_closeness_ranking.py
test_cases/tc21_cross_link_stuck_classification/: README.md  test_tc21_stuck_classification.py
test_cases/tc22_cross_link_snapshot_sampling/: README.md  test_tc22_snapshot_sampling.py
test_cases/tc23_cross_link_mapping_robustness/: README.md  test_tc23_mapping_robustness.py
test_cases/tc24_cross_link_unmapped_handling/: README.md  test_tc24_unmapped_handling.py
test_cases/tc25_cross_link_performance/: README.md  test_tc25_performance.py
test_cases/tc26_cross_link_non_clock_active/: README.md  test_tc26_non_clock_active.py
test_cases/tc27_history_failure_regression/: README.md  run_test.sh  test_tc27_history_failure.py
waveform_explorer/: .gitignore  CMakeLists.txt  README.md  Tech_Note.md  daemon_client.py  perf_test.py  perf_test_daemon.py  timer_tb.vcd  waveform_mcp.py
waveform_explorer/docs/: Tech_Note.md
waveform_explorer/src/: AgentAPI.cpp  AgentAPI.h  FormatAdapter.h  FormatRegistry.cpp  FormatRegistry.h  WaveDatabase.cpp  WaveDatabase.h  main.cpp
waveform_explorer/src/cadence/: CadenceAdapter.h
waveform_explorer/src/fsdb/: FsdbAdapter.cpp  FsdbAdapter.h
waveform_explorer/src/fst/: FstAdapter.cpp  FstAdapter.h
waveform_explorer/src/siemens/: SiemensAdapter.h
waveform_explorer/src/vcd/: VcdAdapter.cpp  VcdAdapter.h
waveform_explorer/tests/: glitch_test.vcd  test_signal_overview.py  test_waveform_commands.py
(+12 files in other folders)
